package com.pfa.tracabilite_ia.entities;

public class Administrateur extends Utilisateur {
}
