package com.pfa.tracabilite_ia.entities;

public class Validateur extends Utilisateur {
}
